--- a/grails-app/assets/javascripts/profilo/profilo.html
+++ b/grails-app/assets/javascripts/profilo/profilo.html
@@ -1,106 +1,64 @@
-  <div class="modal-header">
-	<button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
-	<h4 class="modal-title">Nuovo cliente</h4>
-  </div>
-  
-<form role="form" data-ng-submit="update(item)">
+<div data-gas-user="" user="user" role="role">
+    <div class="modal-header" ng-init="count=0">
+        <button type="button" class="close" data-ng-click="count=count-1;Flash.error('test');" aria-hidden="true">×</button>
+        <h4 class="modal-title">Dati utente {{count}} {{message.text}}</h4>
+    </div>
 
-<div class="modal-body">
 
-<div class="row">
-	<div class="col-sm-3">
-		<div class="form-group">
-		<label for="">Titolo</label>
-		<select class="form-control input-sm">
-			<option> </option>
-			<option>Spett.</option>
-			<option>Egr.</option>
-		</select>
-		</div>
-	</div>
-	<div class="col-md-9">
-		<div class="form-group">
-			<label for="">Denominazione</label>
-			<input type="text" class="form-control input-lg">
-		</div>
-	</div>
+    <div class="modal-body" data-gas-item-load="" item-id="" item="item" resource="supplier">
+
+        <gas-alert level="{{message.level}}" text="{{message.text}}"></gas-alert>
+        <gas-alert level="{{Flash.message.level}}" text="{{Flash.message.text}}"></gas-alert>
+        <gas-alert ng-repeat="error in errors" level="warning" text="{{error.field}}: {{error.message}}"></gas-alert>
+
+        <div class="row">
+            <div class="col-sm-6">
+                <div class="form-group">
+                    <label for="name">Username</label>
+                    <p class="form-control" name="name" id="name">{{user.username}}</p>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="form-group">
+                    <label for="email">E-mail</label>
+                    <p class="form-control" name="name" id="email">{{user.email}}</p>
+                </div>
+            </div>
+        </div>
+        <div class="form-group" ng-if="!activateSupplier && role!='ROLE_SUPPLIER'">
+            <a role="button"  class="btn btn-lg btn-primary btn-block" ng-click="supplier()">
+                Attiva il profilo 'Venditore'
+            </a>
+            <p>L'attivazione come venditore consente di creare una propria vetrina e di gestirre gli ordini online</p>
+        </div>
+        <div ng-show="activateSupplier || role=='ROLE_SUPPLIER'">
+            <div class="clearfix">&nbsp;</div>
+            <hr/>
+            <div class="col-md-12">
+            <p>La compilazione dei proprio indirizzo è obbligatoria e semplifica le ricerche basate sulla posizione</p>
+            </div>
+            <div class="clearfix">&nbsp;</div>
+
+            <ng-include src="'/assets/supplier/form.html'"></ng-include>
+
+            <div class="modal-footer">
+                <a role="button" class="btn btn-default" data-ng-click="count=count+1;cancel()"
+                   data-dismiss="modal">
+                    <i class="glyphicon glyphicon-remove"></i>
+                    Annulla {{$scope}}
+                </a>
+                <a role="button" class="btn btn-default" data-ng-click="count=count-1;user.userEmail='pipp';$('#myModal').modal('hide');"
+                   data-dismiss="modal">
+                    <i class="glyphicon glyphicon-remove"></i>
+                    Annulla
+                </a>
+
+                <a role="button" class="btn btn-success" data-ng-click="updateSupplier(item, user)">
+                    <i class="glyphicon glyphicon-ok"></i>
+                    Salva
+                </a>
+            </div>
+        </div>
+    </div>
+
 </div>
-
-
-<div class="form-group">
-	<label for="">Indirizzo</label> 
-	<textarea rows="2" class="form-control"></textarea>
-</div>
-
-<div class="row">
-	<div class="col-sm-8">
-		<div class="form-group">
-		<label for="">Comune</label>
-		<input type="text" class="form-control">
-		</div>
-	</div>
-	<div class="col-xs-2">
-		<div class="form-group">
-		<label for="">Provincia</label>
-		<input type="text" class="form-control">
-		</div>
-	</div>
-	<div class="col-xs-2">
-		<div class="form-group">
-		<label for="">CAP</label>
-		<input type="text" class="form-control">
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-xs-6">
-		<div class="form-group has-success has-feedback">
-		<label class="control-label" for="cf">Codice Fiscale</label>
-		<input type="text" class="form-control" id="cf">
-		<span class="glyphicon glyphicon-ok form-control-feedback" aria-hidden="true"></span>
-		</div>
-	</div>
-	<div class="col-xs-6">
-		<div class="form-group has-error has-feedback">
-		<label class="control-label" for="">Partita IVA</label>
-		<input type="text" class="form-control">
-		<span class="glyphicon glyphicon-remove form-control-feedback" aria-hidden="true"></span>
-		</div>
-	</div>
-</div>
-
-<div class="row">
-	<div class="col-sm-5">
-	<label for="">Settore</label>
-		<select class="form-control input-sm">
-			<option> </option>
-			<option>Spett.</option>
-			<option>Egr.</option>
-		</select>
-	</div>
-	<div class="col-xs-5">
-		<div class="form-group">
-		<label for="">Gruppo</label>
-		<select class="form-control input-sm">
-			<option> </option>
-			<option>Spett.</option>
-			<option>Egr.</option>
-		</select>
-		</div>
-	</div>
-	<div class="col-xs-2">
-		<div class="form-group">
-		<label for="">CTP</label>
-		<input type="text" class="form-control input-sm">
-		</div>
-	</div>
-</div>
-</div>
-
-<div class="modal-footer">
-	<a role="button" class="btn btn-default" data-back data-ng-click="navBack()"><i class="glyphicon glyphicon-remove"></i> Annulla</a>
-	<a role="button" class="btn btn-success" data-ng-click="editCtrl.update(item)" data-ng-disabled="fattura.$invalid"><i class="glyphicon glyphicon-ok"></i> Salva</a>
-</div>
-	
-</form>
