--- a/grails-app/assets/javascripts/vue/product/pricelist/index.html
+++ b/grails-app/assets/javascripts/vue/product/pricelist/index.html
@@ -5,19 +5,22 @@
     <meta charset=utf-8>
     <meta http-equiv=X-UA-Compatible content="IE=edge">
     <meta name=viewport content="width=device-width,initial-scale=1">
+    <script src=https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.js></script>
     <link rel=icon href=favicon.ico>
     <title>group-buy-csv-upload</title>
     <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css
         crossorigin=anonymous>
-    <link href=./js/app.31182227.js rel=preload as=script>
-    <link href=./js/chunk-vendors.f6949fdc.js rel=preload as=script>
+    <link href=css/app.css rel=preload as=style>
+    <link href=js/app.js rel=preload as=script>
+    <link href=js/chunk-vendors.js rel=preload as=script>
+    <link href=css/app.css rel=stylesheet>
 </head>
 
 <body><noscript><strong>We're sorry but group-buy-csv-upload doesn't work properly without JavaScript enabled. Please
             enable it to continue.</strong></noscript>
     <div id=app></div>
-    <script src=./js/chunk-vendors.f6949fdc.js></script>
-    <script src=./js/app.31182227.js></script>
+    <script src=js/chunk-vendors.js></script>
+    <script src=js/app.js></script>
 </body>
 
 </html>
