--- a/grails-app/assets/javascripts/_old/acquisto.html
+++ b/grails-app/assets/javascripts/_old/acquisto.html
@@ -31,7 +31,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#"><img alt="Fattura Sprint" src="img/logo.png"></a>
+		  <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 		</div>
 		<div class="navbar-collapse collapse main-nav">
 			<ul class="nav navbar-nav">
@@ -224,7 +224,7 @@
 <div class="clearfix"></div>
 
 	  <footer>
-		<p> <img src="img/fatturasprint.png"> &copy; Fattura Sprint 2014 - Powered by NUBEEFY S.r.l. © 2010 - 2014 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
+		<p> <img src="img/fatturasprint.png"> &copy; Group BUY 2020 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
 	  </footer>
 </div>
 
