--- a/grails-app/assets/javascripts/_old/index.html
+++ b/grails-app/assets/javascripts/_old/index.html
@@ -31,7 +31,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <!--<a class="navbar-brand" href="#"><img alt="Fattura Sprint" src="img/logo.png"></a>  -->
+		  <!--<a class="navbar-brand" href="#"><img src="img/logo.png"></a>  -->
 		</div>
 		<div class="navbar-collapse collapse main-nav">
 			<ul class="nav navbar-nav">
@@ -144,7 +144,7 @@
 </table>
 
 	  <footer>
-		<p>&copy; Fattura Sprint 2014</p>
+		<p>&copy; Group BUY 2020</p>
 	  </footer>
 	</div> <!-- /container -->
     	<!--
