--- a/grails-app/assets/javascripts/_old/fatture.html
+++ b/grails-app/assets/javascripts/_old/fatture.html
@@ -32,7 +32,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <!--<a class="navbar-brand" href="#"><img alt="Fattura Sprint" src="img/logo.png"></a>  -->
+		  <!--<a class="navbar-brand" href="#"><img src="img/logo.png"></a>  -->
 		</div>
 		<div class="navbar-collapse collapse main-nav">
 			<ul class="nav navbar-nav">
@@ -165,7 +165,7 @@
 <!-- /pezzi vari -->
 
 		<footer>
-			<p>&copy; Fattura Sprint 2014</p>
+			<p>&copy; Group BUY 2020</p>
 		</footer>
 	</div> <!-- /container -->
 	
