--- a/grails-app/assets/javascripts/_old/vista.html
+++ b/grails-app/assets/javascripts/_old/vista.html
@@ -31,7 +31,7 @@
 			<span class="icon-bar"></span>
 			<span class="icon-bar"></span>
 		  </button>
-		  <a class="navbar-brand" href="#"><img alt="Fattura Sprint" src="img/logo.png"></a>
+		  <a class="navbar-brand" href="#"><img src="img/logo.png"></a>
 		</div>
 		<div class="navbar-collapse collapse main-nav">
 			<ul class="nav navbar-nav">
@@ -215,13 +215,13 @@
 </div>
 
 	  <footer>
-		<p> <img src="img/fatturasprint.png"> &copy; Fattura Sprint 2014 - Powered by NUBEEFY S.r.l. © 2010 - 2014 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
+		<p> &copy; Group BUY 2020 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
 	  </footer>
 </div>
 <!--
 <div class="right-ad">
 	<p>Vuoi avere di più, molto di più? Veramente molto di più? Veramente molto di più? Veramente molto di più? Veramente molto? <br><br>
-    <button type="button" class="btn btn-primary btn-lg btn-block">Passa a Fattura Sprint Pro</button>
+    <button type="button" class="btn btn-primary btn-lg btn-block">Passa a Pro</button>
     </p>
     <img src="img/SNP_2922281_en_v1.png">
 </div>
