--- a/grails-app/assets/javascripts/index.html
+++ b/grails-app/assets/javascripts/index.html
@@ -21,7 +21,7 @@
 	    <![endif]-->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Fattura Sprint - Dashboard</title>
+		<title>Dashboard</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -122,25 +122,25 @@
 				<div class="panel panel-default scadenze">
 				<h3><i class="fa fa-calendar fa-lg" style="background:#A67658"></i> Scadenze</h3>
 				<ul>
-				<li><a><div class="pull-left"><span class="badge label-danger">121</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-danger">121</span> <strong>Fornitore Uno</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
-				<li><a><div class="pull-left"><span class="badge label-danger">37</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-danger">37</span> <strong>Fornitore Due</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
-				<li><a><div class="pull-left"><span class="badge label-warning">6</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-warning">6</span> <strong>Fornitore Tre</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
-				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>Fornitore Due</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
-				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>Fornitore Tre</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
-				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>Fornitore Uno</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
-				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>UAU Studio di Cesare Martino</strong></div>
+				<li><a><div class="pull-left"><span class="badge label-warning">11</span> <strong>Fornitore Tre</strong></div>
 				<div class="pull-left"><small>Fattura n. 12 del 20/11/2014</small></div>
 				<div class="pull-right">9.525,25 €</div></a></li>
 				</ul>
@@ -151,7 +151,7 @@
 		
 		<!-- footer -->
 		<footer>
-			<p> <img src="/img/fatturasprint.png"> &copy; Fattura Sprint 2014 - Powered by NUBEEFY S.r.l. © 2010 - 2014 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
+			<p>  &copy; Group BUY 2020 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
 		</footer>
 		
 	</div> <!-- /container -->
@@ -164,7 +164,7 @@
 			<a class="btn btn-lg btn-success" role="button" href="#buy"><i class="glyphicon glyphicon-circle-arrow-up"></i> Fai l'upgrade</a>
 			</div>
 			<div class="pull-right text-right" style="max-width:500px; margin:0 10px;">
-			<h4 style="margin:2px 0">Vuoi sfruttare Fattura Sprint al massimo?</h4>
+			<h4 style="margin:2px 0">Vuoi sfruttare - al massimo?</h4>
 			Cerca il piano più adatto per la tua attività
 			</div>
 		</div>
