--- a/grails-app/assets/javascripts/ng-templates/navigation-settings.html
+++ b/grails-app/assets/javascripts/ng-templates/navigation-settings.html
@@ -9,7 +9,7 @@
 						<span class="icon-bar"></span>
 						<span class="icon-bar"></span>
 					</button>
-					<a class="navbar-brand" href="#"><img alt="Fattura Sprint" src="/assets/img/logo.png"></a>
+					<a class="navbar-brand" href="#"><img src="/assets/img/logo.png"></a>
 				</div>
 				<div class="navbar-collapse collapse main-nav">
 					<ul class="nav navbar-nav">
