--- a/grails-app/assets/javascripts/preferenze/index.html
+++ b/grails-app/assets/javascripts/preferenze/index.html
@@ -21,7 +21,7 @@
 	    <![endif]-->
 		<meta charset="utf-8">
 		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-		<title>Fattura Sprint - Dashboard</title>
+		<title>Dashboard</title>
 		<meta name="description" content="">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="stylesheet" href="/css/bootstrap.min.css">
@@ -66,7 +66,7 @@
 		
 		<!-- footer -->
 		<footer>
-			<p> <img src="/img/fatturasprint.png"> &copy; Fattura Sprint 2014 - Powered by NUBEEFY S.r.l. © 2010 - 2014 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
+			<p>  &copy; Group BUY 2020 Tutti i diritti riservati. - <a href="#">Privacy</a> - <a href="#">Termini di servizio</a></p>
 		</footer>
 	
 	</div> <!-- /container -->
