--- a/grails-app/assets/javascripts/vue/product/pricelist/index.html
+++ b/grails-app/assets/javascripts/vue/product/pricelist/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
 <html lang=en>
 
-<head>
-    <meta charset=utf-8>
-    <meta http-equiv=X-UA-Compatible content="IE=edge">
-    <meta name=viewport content="width=device-width,initial-scale=1">
-    <script src=https://cdnjs.cloudflare.com/ajax/libs/axios/0.16.2/axios.js></script>
-    <link rel=icon href=favicon.ico>
-    <title>group-buy-csv-upload</title>
-    <link rel=stylesheet href=https://maxcdn.bootstrapcdn.com/bootstrap/3.4.1/css/bootstrap.min.css
-        crossorigin=anonymous>
-    <link href=css/app.css rel=preload as=style>
-    <link href=js/app.js rel=preload as=script>
-    <link href=js/chunk-vendors.js rel=preload as=script>
-    <link href=css/app.css rel=stylesheet>
-</head>
+    <head>
+        <meta charset=utf-8>
+        <meta http-equiv=X-UA-Compatible content="IE=edge">
+        <meta name=viewport content="width=device-width,initial-scale=1">
+        <link href=js/app.js rel=preload as=script>
+        <link href=js/chunk-vendors.js rel=preload as=script>
+    </head>
 
-<body><noscript><strong>We're sorry but group-buy-csv-upload doesn't work properly without JavaScript enabled. Please
-            enable it to continue.</strong></noscript>
-    <div id=app></div>
-    <script src=js/chunk-vendors.js></script>
-    <script src=js/app.js></script>
-</body>
+    <body>
+        <noscript>
+            <strong>We're sorry but group-buy-csv-upload doesn't work properly without JavaScript enabled. Please
+                enable it to continue.</strong>
+        </noscript>
+        <div id=app></div>
+        <script src=js/chunk-vendors.js></script>
+        <script src=js/app.js></script>
+    </body>
 
 </html>
