--- a/grails-app/assets/javascripts/profilo/profilo.html
+++ b/grails-app/assets/javascripts/profilo/profilo.html
@@ -1,7 +1,7 @@
 <div data-gas-user="" user="user" role="role">
     <div class="modal-header" ng-init="count=0">
-        <button type="button" class="close" data-ng-click="count=count-1;Flash.error('test');" aria-hidden="true">×</button>
-        <h4 class="modal-title">Dati utente {{count}} {{message.text}}</h4>
+        <button type="button" class="close" data-ng-click="count=count-1;cancel();" aria-hidden="true">×</button>
+        <h4 class="modal-title">Dati utente {{count}} {{message.text}} -{{usr}}-</h4>
     </div>
 
 
@@ -25,13 +25,13 @@
                 </div>
             </div>
         </div>
-        <div class="form-group" ng-if="!activateSupplier && role!='ROLE_SUPPLIER'">
+        <div class="form-group" ng-if="!activateSupplier && !roles.includes('ROLE_SUPPLIER')">
             <a role="button"  class="btn btn-lg btn-primary btn-block" ng-click="supplier()">
                 Attiva il profilo 'Venditore'
             </a>
             <p>L'attivazione come venditore consente di creare una propria vetrina e di gestirre gli ordini online</p>
         </div>
-        <div ng-show="activateSupplier || role=='ROLE_SUPPLIER'">
+        <div ng-show="activateSupplier || roles.includes('ROLE_SUPPLIER')">
             <div class="clearfix">&nbsp;</div>
             <hr/>
             <div class="col-md-12">
@@ -42,12 +42,7 @@
             <ng-include src="'/assets/supplier/form.html'"></ng-include>
 
             <div class="modal-footer">
-                <a role="button" class="btn btn-default" data-ng-click="count=count+1;cancel()"
-                   data-dismiss="modal">
-                    <i class="glyphicon glyphicon-remove"></i>
-                    Annulla {{$scope}}
-                </a>
-                <a role="button" class="btn btn-default" data-ng-click="count=count-1;user.userEmail='pipp';$('#myModal').modal('hide');"
+                <a role="button" class="btn btn-default" data-ng-click="cancel();"
                    data-dismiss="modal">
                     <i class="glyphicon glyphicon-remove"></i>
                     Annulla
